Fix legacy widget edit style bleed (#32871)
* Fix legacy widget edit style bleed

* Match block width with inserter.

* Make sure all text in legacy widget placeholders is legible.

* Fix background color issue.

--- a/packages/edit-widgets/src/blocks/widget-area/editor.scss
+++ b/packages/edit-widgets/src/blocks/widget-area/editor.scss
@@ -21,6 +21,10 @@
 	.block-list-appender.wp-block {
 		width: initial;
 	}
+	// Override theme custom widths for blocks.
+	.editor-styles-wrapper .wp-block.wp-block.wp-block.wp-block.wp-block {
+		max-width: 100%;
+	}
 }
 
 // Add some spacing above the inner blocks so that the block toolbar doesn't
